--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       }
     </style>
     <script src="Js/p5.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script> -->
-    <!-- <script src="../addons/p5.sound.js"></script> -->
-    <script src="Js/sketch.js"></script>
+    <!-- <script src="Js/p5.sound.min.js"></script> -->
+    <script src="Js/planck.min.js"></script>
+    <script src="Js/p5.play.js"></script>
+    <script src="Js/game.js"></script>
   </head>
 
   <body>
