--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         background-color: #1b1b1b;
       }
     </style>
-    <script src="Js/p5.min.js"></script>
+    <script src="lib/p5.min.js"></script>
     <!-- <script src="Js/p5.sound.min.js"></script> -->
-    <script src="Js/planck.min.js"></script>
-    <script src="Js/p5.play.js"></script>
-    <script src="Js/game.js"></script>
+    <script src="lib/planck.min.js"></script>
+    <script src="lib/p5.play.js"></script>
+    <script src="game.js"></script>
   </head>
 
   <body>
