Create player class
Created a player class
- Constructor
- Animation
- Method for handling movement

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sufi P5</title>
+    <title>Sufi's Dino</title>
     <style>
       body {
         padding: 0;
@@ -11,11 +11,16 @@
         background-color: #1b1b1b;
       }
     </style>
+    <!-- P5 libraries -->
+
     <script src="lib/p5.min.js"></script>
     <!-- <script src="Js/p5.sound.min.js"></script> -->
     <script src="lib/planck.min.js"></script>
     <script src="lib/p5.play.js"></script>
+    
+    <!-- Game file and classes -->
     <script src="game.js"></script>
+    <script src="player.js"></script>
   </head>
 
   <body>
