--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Game file and classes -->
     <script src="game.js"></script>
     <script src="player.js"></script>
+    <script src="groups.js"></script>
   </head>
 
   <body>
